--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,18 +2,11 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100%;
-  background-color: #1e2f2d;
+  background-color: #382838;
+  
 }
 
-a,
-label,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6, h7 {
+a, label, p, h1, h2, h3, h4, h5, h6, li, span {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -24,13 +17,30 @@ h6, h7 {
   color: #FFFFFF;
 }
 
+/* CSS ANIMATIONS */
+.typing-effect {
+  overflow: hidden;
+  white-space: wrap;
+  margin: 0 auto;
+}
 
+/* Keyframes for the typing animation */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* Link color */
 .main-color {
-  color: #6F1B6F;
+  color: #6f1b6f;
 }
 
 .main-color-dark {
-  color: #4D114D;
+  color: #391539;
 }
 
 .accent-color {
@@ -41,28 +51,37 @@ h6, h7 {
   color: #1f2020;
 }
 
-.main-bg {
+.bg-main {
   background-color: #6F1B6F;
-  ;
+}
+.bg-main-gradient {
+  background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
+}
+.bg-main-gradient-circle {
+  background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
 }
 
-.main-bg-dark {
+.bg-main-gradient-alter {
+  background: linear-gradient(to bottom right, #57a9a1, #6F1B6F);
+}
+
+.bg-main-dark {
   background-color: #211e22;
 }
 
-.main-bg-dark-translucent {
+.bg-main-dark-translucent {
   background-color: #2c1631e8;
 }
 
-.main-bg-light {
+.bg-main-light {
   color: #cfa6cb;
 }
 
-.accent-bg {
+.bg-accent {
   background-color: #57a9a1;
 }
 
-.accent-bg-dark {
+.bg-accent-dark {
   background-color: #252b29;
 }
 
@@ -89,4 +108,48 @@ h6, h7 {
 .custom-btn:hover {
   transform: scale(1.1);
   /* Increase scale on hover */
+}
+
+/* Style for WebKit-based browsers (e.g., Chrome, Safari) */
+::-webkit-scrollbar {
+  background-color: #252b29; /* Sets the background color of the scrollbar to transparent */
+}
+
+/* Style for the scrollbar handle */
+::-webkit-scrollbar-thumb {
+  background-color: #812181; /* Sets the color of the scrollbar handle to red */
+}
+
+html {
+  scrollbar-color: #812181 #252b29; /* Sets the scrollbar handle color to red */
+}
+
+.shadow-custom {
+  box-shadow: 0 0.75rem 1rem rgba(0, 0, 0, 0.8) !important;
+}
+
+.btn-outline-main {
+  --bs-btn-color: #6F1B6F;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #6F1B6F;
+  --bs-btn-hover-border-color: #6F1B6F;
+  --bs-btn-focus-shadow-rgb: 13, 110, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #6F1B6F;
+  --bs-btn-active-border-color: #6F1B6F;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #6F1B6F;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #6F1B6F;
+  --bs-btn-border-width:0.1rem;
+  --bs-gradient: none;
+}
+
+.btn-main {
+  --bs-btn-color: #ffffff;
+  --bs-btn-bg: #6F1B6F;
+  --bs-btn-hover-color: #4D114D;
+  --bs-btn-hover-bg: #ffffff;
+  --bs-btn-hover-border-color: #6F1B6F;
 }
