--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,28 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<meta name="description" content="Explore a diverse collection of my work in web development, showcasing responsive designs, interactive projects, and innovative solutions. Get inspired by my portfolio and discover how I can bring your ideas to life.">
+
 		<title>
-			FoundTexas - {% block title %} none {% endblock %}
+			FoundTexas.net -
+			{% block title %}
+				none
+			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%30>🐼</text></svg>"> {% block stylesheets %}{% endblock %}
+		<link rel="icon" href="{{ asset('foundtexaspanda.svg') }}"> {% block stylesheets %}{% endblock %}
+
+		<!-- googleapis fonts Pixelify+Sans -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.css">
+		<link
+		href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+
+		<!-- font-awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+		<!-- bootstrap -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+		
+		<!-- bootstrap 
+		<link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet">
+		<script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script> 
+		-->
 
-		<script src="bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
+		<!-- sweetalert2 -->
+		<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet">
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.all.min.js"></script>
 
 		{% block javascripts %}
 			{% block importmap %}
 				{{ importmap('app') }}
 			{% endblock %}
 		{% endblock %}
+
+		<link href="{{ asset('styles/app.css') }}" rel="stylesheet">
 	</head>
+	
 	<body>
+		<div id="loading" class="position-fixed container-fluid p-0" style="z-index: 900000; height:101vh; background-color:#111111; display:block;">
+			<div class="row d-flex align-items-center justify-content-center p-5 w-100 h-100" >
+				<img class="" src="{{ asset('loadgif.gif') }}" style="width: 40vw; height:auto;" alt="Loading..." />
+			</div>
+		</div>
+
+		<script>
+			document.addEventListener("DOMContentLoaded", function() {
+
+				// Event listener to detect when the page is being refreshed
+				window.addEventListener('beforeunload', function() {
+					showLoading(); // Show the loading spinner before the page is refreshed
+				});
+
+				// Event listener to detect when the page is being shown from bfcache (navigating back)
+				window.addEventListener('pageshow', function(event) {
+					if (event.persisted) {
+						// Page is being loaded from the bfcache (navigated back)
+						hideLoading(); // Immediately hide the loading spinner
+					}
+				});
+
+			});
+
+			function showLoading() {
+					document.getElementById('loading').style.display = 'block';
+				}
+
+				// Function to hide the loading spinner
+				function hideLoading() {
+					document.getElementById('loading').style.display = 'none';
+				}
+
+				// Add a delay before hiding the loading spinner (example: 1000ms = 1 second)
+				setTimeout(function() {
+					hideLoading(); // Hide the loading spinner after a short delay
+				}, 1000); // Change the delay value as needed
+		</script>
+
 		{% block sound %}
 			<audio class="audio-sfx-group" id="audiopress" src="{{ asset('sounds/pressUI.mp3') }}"></audio>
 			<audio class="audio-sfx-group" id="audioback" src="{{ asset('sounds/backUI.mp3') }}"></audio>
@@ -31,8 +95,19 @@
 		{% endblock %}
 
 		{% block head %}
-			{{ include('pausemenu.html.twig') }}
+			{% set buttons = [
+				{ id: '#aboutme', label: 'About Me' },
+				{ id: 'timeline', label: 'CV' },
+				{ id: '#projects', label: 'Projects' },
+				{ id: '#contact', label: 'Contact' }
+			] %}
+			{% include 'pausemenu.html.twig' with {'buttons': buttons} %}
+
 		{% endblock %}
 		{% block body %}{% endblock %}
+		{% block foot %}
+			{% include 'index/footer.twig' %}
+		{% endblock %}
+
 	</body>
 </html>
