--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -13,7 +13,7 @@ h2,
 h3,
 h4,
 h5,
-h6, h7 {
+h6, li, span {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
