--- a/templates/timeline.twig
+++ b/templates/timeline.twig
@@ -23,7 +23,10 @@
 					{% endif %}
 				{% endfor %}
 			{% endfor %}
-			<button type="button" class="btn btn-primary" onclick="selectAllTags()">Select All</button>
+			<div class="col-auto" role="group" aria-label="options">
+				<button type="button" class="btn btn-success" onclick="selectAllTags(true)">Select All</button>
+				<button type="button" class="btn btn-secondary" onclick="selectAllTags(false)">deselect All</button>
+			</div>
 			{% for tag in all_tags %}
 				<div class="form-check form-check-inline ">
 					<input type="checkbox" class="btn-check" id="btn-check-outlined {{ tag }}" name="tags" value="{{ tag }}" checked>
@@ -42,9 +45,17 @@
 					{% set events_in_year = timeline_events|filter(e => e.date|date('Y') == year) %}
 					{% for event in events_in_year %}
 						<div class="card" style="display: inline-block; margin-right: 10px;" data-tags="{{ event.tags|join(',') }}">
-							<h4>{{ event.title }}</h4>
-							<p>{{ event.description }}</p>
-							<span>{{ event.date }}</span>
+							<div class="row">
+								<h4 class="col">{{ event.title }}</h4>
+								<span class="col">{{ event.date }}
+									-
+									{{ event.endDate }}</span>
+							</div>
+							<ul>
+								{% for point in event.description %}
+									<li>{{ point }}</li>
+								{% endfor %}
+							</ul>
 							{# Assign tags to the card as a data attribute #}
 							<div class="tags" style="display: none;">{{ event.tags|json_encode|raw }}</div>
 						</div>
