--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -29,9 +29,9 @@
 		}
 	</style>
 
-	<section id="aboutme" class="container-fluid d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-		<img class="mx-auto position-fixed" style="z-index: -1000000; filter: blur(7px) brightness(70%); height: 103%; width: 111%;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
-		<img class="mx-auto position-fixed" style="z-index: -100000; filter: blur(5px); height: 103vh; width: auto;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
+	<section id="aboutme" class="container-fluid d-flex justify-content-center align-items-center" style="height: 100vh;  width: 100%; overflow: hidden;">
+		<img class="mx-auto position-fixed" style="z-index: -1000000; filter: blur(7px) brightness(70%); height: 103%; width: 101%;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
+		<img class="mx-auto position-fixed" style="z-index: -100000; filter: blur(5px); height: 102vh; width: auto;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
 		<div class="container main-bg-dark-translucent rounded-5 border border-light d-flex flex-column justify-content-between justify-content-around" style="min-height: 35vh;">
 			<div class="row mt-md-0 mt-3">
 				<h2 class="typing-effect text-center accent-color">Web & Game Dev</h2>
